@@ -1,6 +1,8 @@
 #ifndef _ZAPPER_H_
 #define _ZAPPER_H_
 
+#include "types.h"
+
 struct ZAPPER
 {
 	uint32 mzx,mzy,mzb;
